tests/rosetta/transpiler/Clojure/forest-fire.error
run error: exit status 1
____________________________________________________________


 T     T T T T T T T     T T     T T       T T       T      

               T T T T       T     T T       T T       T T  

 T T T T       T T       T   T T T T   T   T   T T   T T   T

 T T T     T T T   T T         T       T T T     T T T   T  

 T T T   T T   T T           T T T           T   T   T T    

     T T T   T   T   T   T T   T T     T T     T T T T T T T

 T T T   T T T   T             T       T         T          

 T       T T T       T T T   T   T T T     T   T   T T      

   T T     T T   T T   T       T   T     T   T T     T      

     T T T T T       T       T   T T T         T         T  

   T     T   T T   T   T   T T T   T T T T     T T   T      

   T T       T     T T T T T   T       T T   T   T     T   T

 T   T T   T T T     T         T T T     T   T T     T T    

 T   T T T       T   T T   T   T T         T   T T     T T  

 T       T     T T   T T T   T       T   T       T T       T

   T T T T T T T   T T T   T T       T T       T   T T T    

 T T     T   T T T T T   T         T T T     T   T   T T T  

   T     T T T   T         T T T       T     T   T   T T T  

     T T T T T     T T     T T T   T T T   T             T  

     T T               T     T T   T   T T T   T T T T     T

Execution error (ClassCastException) at main/chance (forest-fire.clj:29).
class java.lang.Double cannot be cast to class java.lang.String (java.lang.Double and java.lang.String are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-9022767835200685982.edn
